<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movie_menu"
        android:icon="@drawable/ic_video_player"
        android:title="@string/movies" />

    <item
        android:id="@+id/tv_show_menu"
        android:icon="@drawable/ic_television"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_fav"
        android:title="@string/favorites" />
</menu>